--- a/public/style/header.css
+++ b/public/style/header.css
@@ -6,6 +6,7 @@ header {
   justify-content: space-between;
   padding: 0px 30px;
   box-shadow: var(--shadow-color) 0px 3px 10px;
+  z-index: 1;
 }
 
 header img {
@@ -15,5 +16,5 @@ header img {
 
 header h1 {
   font-family: var(--primary-font-family);
-  color: var(--primary-font-color);
+  color: var(--font-color-white-primary);
 }
