--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,20 +1,29 @@
 @import 'header.css';
 @import 'body.css';
+@import 'messages.css';
+@import 'input.css';
 
 :root {
   --background-color: #e3e3e3;
   --secondary-background-color: #fbfbfb;
   --primary-color: #0096dd;
-  --secondary-color: #0096dd;
+  --secondary-color: #007db8;
   --primary-font-family: Arial, Helvetica, sans-serif;
   --secondary-font-family: Consolas, monaco, monospace;
-  --primary-font-color: #f5f5f5;
-  --shadow-color: black;
+  --font-color-white-primary: #f5f5f5;
+  --font-color-white-secondary: #e3e3e3;
+  --font-color-black-primary: #303030;
+  --font-color-black-secondary: #444444;
+  --shadow-color: rgb(122, 122, 122);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #353535;
+    --background-color: #1a1a1a;
+    --secondary-background-color: #4e4e4e;
+    --font-color-black-primary: #f5f5f5;
+    --font-color-black-secondary: #e3e3e3;
+    --shadow-color: rgb(0, 0, 0);
   }
 }
 
