--- a/public/style/input.css
+++ b/public/style/input.css
@@ -17,12 +17,16 @@
 }
 
 .input-button {
-  width: 50px;
-  height: 50px;
-  padding: 5px;
   box-shadow: var(--shadow-color) 2px 2px 5px;
   background-color: var(--primary-color);
   transition: 0.2s ease-in;
+  border: none;
+}
+
+.input-button img {
+  width: 40px;
+  height: 40px;
+  padding: 5px;
 }
 
 .input-button:hover {
