--- a/public/style/header.css
+++ b/public/style/header.css
@@ -12,9 +12,18 @@ header {
 header img {
   height: 100%;
   max-height: 60px;
+  display: none;
 }
 
 header h1 {
   font-family: var(--primary-font-family);
   color: var(--font-color-white-primary);
+  margin: auto;
+}
+
+
+@media screen and (min-width: 614px) {
+  header img {
+    display: block;
+  }
 }
